# numpickle

./: README.md  README.rst  pyproject.toml
numpickle/: __init__.py  main.py
tests/: test_numpickle.py
