[tool.poetry]
name = "numpickle"
version = "0.1.3-3"
description = "Faster loading of pandas data frames by saving them as numpy arrays and pickling their meta info (row+column names, column dtype info)."
authors = ["Gwang-Jin Kim <gwang.jin.kim.phd@gmail.com>"]
maintainers = ["Gwang-Jin Kim <gwang.jin.kim.phd@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gwangjinkim/numpickle"
documentation = "https://gwang-jin-kim.medium.com/faster-loading-and-saving-of-pandas-data-frames-using-numpickle-numpy-and-pickle-d15870519529"
keywords = [
  "Excel",
  "Pandas",
  "data frame",
  "I/O"
]



[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.19.2"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
